# 3D-Convex-Hull-Problems

./: CMakeLists.txt  README.md
include/: camera.h  common.h  defines.h  geometry.h  obj_loader.h  opengl_object.h  scene.h  shader.h  solver.h  utils.h
libs/: CMakeLists.txt
libs/eigen/: CMakeLists.txt
libs/tinyobjloader/: CMakeLists.txt
report/: .gitignore  document.tex  report.tex
src/: geometry.cpp  main.cpp  obj_loader.cpp  opengl_object.cpp  scene.cpp  shader.cpp  solver.cpp  utils.cpp
src/shaders/: no_lighting.fs  phong_lighting.fs  projective.vs
